Fix x-axis overflow when ReadyDownloadContainer is shown. Closes #18

--- a/frontend/public/css/common.css
+++ b/frontend/public/css/common.css
@@ -1,7 +1,6 @@
 /* Element specific */
 #main-container {
     min-height: 100vh;
-    min-width: 100vw;
     background-color: rgba(255, 255, 255, 0.5);
     padding: 15px;
 }
